fixing z-index, begain making new resolutions

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -123,20 +123,21 @@ main {
 	transform: translate(-50%, -50%);
 	border: 3px solid $main-whithe;
 	// border-radius: 5%;
-	z-index: 100;
+	// z-index: 100;
 	cursor: pointer;
 }
 
 .two {
+	position: relative;
 	width: 50%;
 	height: 100%;
 	// border: 1px solid black;
-	z-index: 100;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start; /* Wyśrodkowanie względem osi Y */
 	align-items: center;
 	// align-self: center;
+	z-index: 300;
 
 	p {
 		margin-left: 10px;
@@ -145,7 +146,7 @@ main {
 		font-size: 1em;
 		color: $letters-white;
 		text-align: left;
-		z-index: 111;
+		z-index: 601;
 	}
 }
 
@@ -154,7 +155,7 @@ main {
 	width: 50%;
 	height: 100%;
 	// border: 1px solid black;
-	z-index: 500;
+	z-index: 200;
 }
 
 .two-left {
@@ -166,15 +167,18 @@ main {
 	flex-direction: column;
 	justify-content: flex-start; /* Wyśrodkowanie względem osi Y */
 	align-items: center;
+	z-index: 100;
 	// align-self: center;
 
 	p {
+		// position: relative;
 		margin-left: 10px;
 		// padding: auto;
 
 		font-size: 1em;
 		color: $letters-white;
 		text-align: left;
+		z-index: 800;
 	}
 }
 
@@ -182,28 +186,8 @@ main {
 	position: absolute;
 	top: 45%;
 	left: 52%;
-	z-index: 100;
+	z-index: -100;
 }
-
-// .image-container {
-// 	top: 25%;
-// 	left: 30%;
-// 	position: absolute;
-
-// 	width: 260px;
-// 	height: 175px;
-// 	z-index: 10;
-// 	border: 1px solid white;
-// 	transform: translate(-50%, -50%);
-// }
-
-// .img-one {
-// 	position: absolute;
-// 	max-width: 100%;
-// 	max-height: 100%;
-// 	object-fit: fill;
-// 	z-index: 10;
-// }
 
 .tilt {
 	position: absolute;
@@ -412,12 +396,43 @@ main {
 	display: none;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 720px) {
 	main {
 		width: 100%;
 	}
 	.wrapper {
 		width: 60%;
 		overflow: visible;
+	}
+
+	.block {
+		position: relative;
+		width: 100%;
+		height: 400px;
+		// border: 1px solid red;
+		display: flex;
+	}
+
+	.img {
+		position: absolute;
+		top: 45%;
+		left: 48%;
+		width: 90%;
+		height: auto;
+		transform: translate(-50%, -50%);
+		border: 3px solid $main-whithe;
+		// border-radius: 5%;
+		z-index: 100;
+		cursor: pointer;
+	}
+
+	.tilt {
+		width: 800px;
+		height: 500px;
+	}
+
+	.tilt-shadow {
+		width: 800px;
+		height: 500px;
 	}
 }
